# Tarea_ELO329_T3

./: README.md  documentacion.html
Etapa1/: CMakeLists.txt  Cellular.h  CellularView.h  Equipo.h  Etapa1.pro  Makefile  Territory.h  main.cpp  moc_territoryview.cpp  stage1  territoryview.h
Etapa1/config/: confix.txt
Etapa2/: CMakeLists.txt  ETNube.h  Equipo.cpp  Equipo.h  Territory.cpp  Territory.h  main.cpp  territoryview.h
Etapa2/config/: confix.txt
Etapa3/: CMakeLists.txt  FindMyWindow.h  Tablet.h  TabletView.h  Territory.h  main.cpp  territoryview.h
Etapa_4/: CMakeLists.txt  Cellular.h  CellularView.h  ETNube.h  EloTelTag.h  EloTelTagView.h  FindMyWindow.h  GFindMyWindow.h  Makefile  Territory.cpp  documentacion.html  main.cpp  territoryview.h
